# triton-windows

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml
.github/scripts/: extract_cuda.py
.github/workflows/: build-and-test-triton-amd.yml  build-tcc-windows-arm64.yml  build-triton-windows-arm64.yml  build-triton.yml  llvm-build.yml
cmake/: llvm-info.json  nvidia-toolchain-version.json
examples/plugins/: CMakeLists.txt
include/triton/Tools/: PluginUtils.h
lib/Analysis/: Membar.cpp
lib/Conversion/TritonGPUToLLVM/: AllocateWarpGroups.cpp  GlobalScratchMemoryAllocation.cpp  WarpSpecializeUtility.cpp
lib/Conversion/TritonInstrumentToLLVM/: CMakeLists.txt
lib/Conversion/TritonToTritonGPU/: RelayoutTritonGPU.cpp  TritonToTritonGPUPass.cpp
lib/Dialect/Gluon/Transforms/: Canonicalize.cpp  ResolveAutoEncodings.cpp  SimplifyControlFlow.cpp
lib/Dialect/Triton/Transforms/: Combine.cpp  LoopAwareCSE.cpp  ReorderBroadcast.cpp  RewriteTensorDescriptorToPointer.cpp
lib/Dialect/TritonGPU/IR/: Ops.cpp
lib/Tools/: PluginUtils.cpp
python/: build_helpers.py
python/src/: gluon_ir.cc  llvm.cc  main.cc
python/test/: conftest.py
python/test/unit/: test_debug.py  test_knobs.py
python/test/unit/language/: test_core.py  (+8 more)
python/triton/: __init__.py  knobs.py  windows_utils.py
python/triton/compiler/: compiler.py
python/triton/language/: core.py
python/triton/runtime/: autotuner.py  build.py  cache.py  driver.py  windows.py
python/triton_kernels/triton_kernels/: roofline.py
(+47 files in other folders)
